# mozart

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README-zh.md  README.md  gprof.txt
.github/workflows/: build.yml
mozart++/: any  codecvt  core  event  exception  fdstream  function  iterator_range  memory  mozart  optional  process  stream  string  timer  type_traits  utility  utility.hpp
mozart++/core/: _event.hpp  any.hpp  base.hpp  event.hpp  exception.hpp  iterator_range.hpp  memory.hpp  optional.hpp  stream.hpp  string.hpp  timer.hpp  type_traits.hpp  typelist.hpp  utility.hpp
mozart++/core.cxx/: base.hpp  event_emitter.hpp  exception.hpp  function.hpp  type_traits.hpp
mozart++/foundation.cxx/: any.hpp  iterator_range.hpp  memory.hpp  optional.hpp  stream.hpp  timer.hpp
mozart++/fp/: curry.hpp  function.hpp
mozart++/mpp_core/: event_emitter.hpp  exception.hpp  function.hpp  type_traits.hpp
mozart++/mpp_foundation/: any.hpp  iterator_range.hpp  memory.hpp  stream.hpp
mozart++/mpp_string/: codecvt.hpp  format.hpp
mozart++/mpp_system/: io.hpp  process.hpp
mozart++/string/: codecvt.hpp  format.hpp  string.hpp
mozart++/string.cxx/: codecvt.hpp  string.hpp
mozart++/system/: fdstream.hpp  file.hpp  pipe.hpp  process.hpp
mozart++/system.cxx/: fdstream.hpp  process.hpp
src/: any.cpp  const_strlen.cpp  core.cpp  dummy.cpp  mozart.cpp  timer.cpp
tests/: benchmark-event-emitter.cpp  test-event-emit.cpp  test-event.cpp  test-fdstream.cpp  test-fp-curry.cpp  test-optional.cpp  test-process.cpp  test-stream.cpp  test-stringref.cpp  test-typelist.cpp
